--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/adminapp/js/app.js": "/adminapp/js/app.js",
+    "/adminapp/css/app.css": "/adminapp/css/app.css"
 }
